--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
 language: node_js
 node_js:
   - 0.8
+script: node_modules/karma/bin/karma start karma.conf.js --single-run
+before_script:
+  - npm install
