--- a/package.json
+++ b/package.json
@@ -1,14 +1,21 @@
 {
+  "name": "jquery.loan-calculator",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/scrubmx/jquery.loan-calculator"
+  },
+  "license": "MIT",
   "devDependencies": {
     "jasmine-core": "^2.4.1",
     "jquery": "^2.1.4",
     "karma": "^0.13.15",
     "karma-jasmine": "^0.3.6",
+    "karma-jasmine-ajax": "^0.1.13",
     "karma-jasmine-jquery": "^0.1.1",
-    "karma-phantomjs-launcher": "^0.2.1",
-    "phantomjs": "^1.9.19"
+    "karma-phantomjs-launcher": "^0.1.4",
+    "phantomjs": "^1.9.18"
   },
   "scripts": {
-    "test": "karma start >/dev/null & sleep 5 && karma run && ps -ef | grep karma | grep -v grep | awk '{print $2}' | xargs kill -9"
+    "test": "node_modules/karma/bin/karma start karma.conf.js --single-run"
   }
 }
