--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "jquery.loan-calculator",
+  "version": "2.0.2",
+  "description": "Amortized Loan Calculator jQuery Plugin",
+  "author": "Jorge González",
   "repository": {
     "type": "git",
     "url": "https://github.com/scrubmx/jquery.loan-calculator"
@@ -14,6 +17,9 @@
     "karma-jasmine-jquery": "^0.1.1",
     "karma-phantomjs-launcher": "^0.1.4",
     "phantomjs": "^1.9.18"
+  },
+  "bugs": {
+    "url": "https://github.com/scrubmx/jquery.loan-calculator/issues"
   },
   "scripts": {
     "test": "node_modules/karma/bin/karma start karma.conf.js --single-run"
