Define main script in package.json
This allow third party scripts to require this plugin

jQuery for instance follows this pattern:

https://github.com/jquery/jquery/blob/master/package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "jquery.loan-calculator",
   "version": "2.0.2",
+  "main": "js/jquery.loan-calculator.js",
   "description": "Amortized Loan Calculator jQuery Plugin",
   "author": "Jorge González",
   "repository": {
