--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "url": "https://github.com/scrubmx/jquery.loan-calculator/issues"
   },
   "scripts": {
-    "test": "node_modules/karma/bin/karma start karma.conf.js --single-run"
+    "test": "node_modules/karma/bin/karma start karma.conf.js --single-run",
+    "watch": "node_modules/karma/bin/karma start karma.conf.js"
   }
 }
