--- a/package.json
+++ b/package.json
@@ -1,29 +1,45 @@
 {
-  "name": "jquery.loan-calculator",
-  "version": "3.1.3",
-  "main": "js/jquery.loan-calculator.js",
-  "description": "Amortized Loan Calculator jQuery Plugin",
-  "author": "Jorge González",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/scrubmx/jquery.loan-calculator"
-  },
-  "license": "MIT",
-  "devDependencies": {
-    "jasmine-core": "^2.4.1",
-    "jquery": "^2.1.4",
-    "karma": "^0.13.15",
-    "karma-jasmine": "^0.3.6",
-    "karma-jasmine-ajax": "^0.1.13",
-    "karma-jasmine-jquery": "^0.1.1",
-    "karma-phantomjs-launcher": "^1.0.2",
-    "phantomjs": "^1.9.18"
-  },
-  "bugs": {
-    "url": "https://github.com/scrubmx/jquery.loan-calculator/issues"
-  },
-  "scripts": {
-    "test": "node_modules/karma/bin/karma start karma.conf.js --single-run",
-    "watch": "node_modules/karma/bin/karma start karma.conf.js"
-  }
+    "name": "lmcu-loan-calculator-wordpress"
+    , "version": "1.0.0"
+    , "description": "A Wordpress plugin to create a simple loan calculator from a shortcode configurable via shortcode attributes"
+    , "main": "gulpfile.js"
+    , "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.11.2"
+        , "bootstrap": "^4.3.1"
+        , "gulp": "^4.0.2"
+        , "gulp-concat": "^2.6.1"
+        , "gulp-purgecss": "^1.2.0"
+        , "gulp-sass": "^4.0.2"
+        , "gulp-uglify": "^3.0.2"
+        , "gulp-zip": "^5.0.1"
+        , "jquery": "^3.4.1"
+        , "jquery.loan-calculator": "^3.1.3"
+        , "node-sass": "^4.12.0"
+        , "nouislider": "^14.0.3"
+        , "popper.js": "^1.16.0"
+        , "wnumb": "^1.1.0"
+    }
+    , "devDependencies": {
+        "gulp-clean-css": "^4.2.0"
+        , "gulp-embed-svg": "^1.1.6"
+        , "gulp-svgo": "^2.1.1"
+    }
+    , "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    }
+    , "repository": {
+        "type": "git"
+        , "url": "git+https://github.com/lmculondon/lmcu-loan-calculator.git"
+    }
+    , "keywords": [
+    "loan-calculator"
+    , "calculator"
+    , "loan"
+  ]
+    , "author": "Ben West"
+    , "license": "ISC"
+    , "bugs": {
+        "url": "https://github.com/lmculondon/lmcu-loan-calculator/issues"
+    }
+    , "homepage": "https://github.com/lmculondon/lmcu-loan-calculator#readme"
 }
