--- a/package.json
+++ b/package.json
@@ -1,45 +1,45 @@
 {
-    "name": "lmcu-loan-calculator-wordpress"
-    , "version": "1.0.0"
-    , "description": "A Wordpress plugin to create a simple loan calculator from a shortcode configurable via shortcode attributes"
-    , "main": "gulpfile.js"
-    , "dependencies": {
-        "@fortawesome/fontawesome-free": "^5.11.2"
-        , "bootstrap": "^4.3.1"
-        , "gulp": "^4.0.2"
-        , "gulp-concat": "^2.6.1"
-        , "gulp-purgecss": "^1.2.0"
-        , "gulp-sass": "^4.0.2"
-        , "gulp-uglify": "^3.0.2"
-        , "gulp-zip": "^5.0.1"
-        , "jquery": "^3.4.1"
-        , "jquery.loan-calculator": "^3.1.3"
-        , "node-sass": "^4.12.0"
-        , "nouislider": "^14.0.3"
-        , "popper.js": "^1.16.0"
-        , "wnumb": "^1.1.0"
-    }
-    , "devDependencies": {
-        "gulp-clean-css": "^4.2.0"
-        , "gulp-embed-svg": "^1.1.6"
-        , "gulp-svgo": "^2.1.1"
-    }
-    , "scripts": {
+    "name": "lmcu-loan-calculator-wordpress",
+    "version": "1.0.0",
+    "description": "A Wordpress plugin to create a simple loan calculator from a shortcode configurable via shortcode attributes",
+    "main": "gulpfile.js",
+    "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.11.2",
+        "bootstrap": "^4.3.1",
+        "gulp": "^4.0.2",
+        "gulp-concat": "^2.6.1",
+        "gulp-purgecss": "^1.2.0",
+        "gulp-sass": "^4.0.2",
+        "gulp-uglify": "^3.0.2",
+        "gulp-zip": "^5.0.1",
+        "jquery": "^3.4.1",
+        "jquery.loan-calculator": "^3.1.3",
+        "node-sass": "^4.12.0",
+        "nouislider": "^14.0.3",
+        "popper.js": "^1.16.0",
+        "wnumb": "^1.1.0"
+    },
+    "devDependencies": {
+        "gulp-clean-css": "^4.2.0",
+        "gulp-embed-svg": "^1.1.6",
+        "gulp-svgo": "^2.1.1"
+    },
+    "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
-    }
-    , "repository": {
-        "type": "git"
-        , "url": "git+https://github.com/lmculondon/lmcu-loan-calculator.git"
-    }
-    , "keywords": [
-    "loan-calculator"
-    , "calculator"
-    , "loan"
-  ]
-    , "author": "Ben West"
-    , "license": "ISC"
-    , "bugs": {
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/lmculondon/lmcu-loan-calculator.git"
+    },
+    "keywords": [
+        "loan-calculator",
+        "calculator",
+        "loan"
+    ],
+    "author": "Ben West",
+    "license": "ISC",
+    "bugs": {
         "url": "https://github.com/lmculondon/lmcu-loan-calculator/issues"
-    }
-    , "homepage": "https://github.com/lmculondon/lmcu-loan-calculator#readme"
+    },
+    "homepage": "https://github.com/lmculondon/lmcu-loan-calculator#readme"
 }
