--- a/package.json
+++ b/package.json
@@ -4,26 +4,29 @@
     "description": "A Wordpress plugin to create a simple loan calculator from a shortcode configurable via shortcode attributes",
     "main": "gulpfile.js",
     "dependencies": {
-        "@fortawesome/fontawesome-free": "^5.12.0",
-        "autonumeric": "^4.5.10",
-        "bootstrap": "^4.4.1",
+        "@fortawesome/fontawesome-free": "^5.15.1",
+        "autonumeric": "^4.6.0",
+        "bootstrap": "^4.5.3",
         "gulp": "^4.0.2",
         "gulp-concat": "^2.6.1",
+        "gulp-inject": "^5.0.5",
         "gulp-purgecss": "^1.2.0",
-        "gulp-sass": "^4.0.2",
+        "gulp-sass": "^4.1.0",
+        "gulp-svgmin": "^3.0.0",
+        "gulp-svgstore": "^7.0.1",
         "gulp-uglify": "^3.0.2",
-        "gulp-zip": "^5.0.1",
-        "jquery": "^3.4.1",
+        "gulp-zip": "^5.0.2",
+        "jquery": "^3.5.1",
         "jquery.loan-calculator": "^3.1.3",
-        "node-sass": "^4.13.0",
-        "nouislider": "^14.1.1",
-        "popper.js": "^1.16.0",
+        "node-sass": "^4.14.1",
+        "nouislider": "^14.6.2",
+        "popper.js": "^1.16.1",
         "wnumb": "^1.2.0"
     },
     "devDependencies": {
-        "gulp-clean-css": "^4.2.0",
+        "gulp-clean-css": "^4.3.0",
         "gulp-embed-svg": "^1.2.0",
-        "gulp-svgo": "^2.1.1"
+        "gulp-svgo": "^2.2.1"
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
