--- a/package.json
+++ b/package.json
@@ -12,17 +12,16 @@
         "gulp-inject": "^5.0.5",
         "gulp-minify-css": "^1.2.4",
         "gulp-purgecss": "^1.2.0",
-        "gulp-sass": "^4.1.0",
         "gulp-svgmin": "^3.0.0",
         "gulp-svgstore": "^7.0.1",
         "gulp-uglify": "^3.0.2",
         "gulp-zip": "^5.0.2",
         "jquery": "^3.5.1",
         "jquery.loan-calculator": "^3.1.3",
-        "node-sass": "^4.14.1",
         "nouislider": "^14.6.2",
         "popper.js": "^1.16.1",
-        "wnumb": "^1.2.0"
+        "wnumb": "^1.2.0",
+        "gulp-sass": "^5.1.0"
     },
     "devDependencies": {
         "eslint": "^7.32.0",
@@ -35,7 +34,8 @@
         "gulp-embed-svg": "^1.2.0",
         "gulp-eslint": "^6.0.0",
         "gulp-svgo": "^2.2.1",
-        "purgecss-with-wordpress": "^4.0.3"
+        "purgecss-with-wordpress": "^4.0.3",
+        "sass": "^1.50.0"
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
