--- a/package.json
+++ b/package.json
@@ -1,58 +1,37 @@
 {
-    "name": "lmcu-loan-calculator-wordpress",
-    "version": "1.2.3",
-    "description": "A Wordpress plugin to create a simple loan calculator from a shortcode configurable via shortcode attributes",
-    "main": "gulpfile.js",
-    "dependencies": {
-        "@fortawesome/fontawesome-free": "^5.15.1",
-        "autonumeric": "^4.6.0",
-        "bootstrap": "^4.5.3",
-        "gulp-bump": "^3.2.0",
-        "gulp-concat": "^2.6.1",
-        "gulp-inject": "^5.0.5",
-        "gulp-minify-css": "^1.2.4",
-        "gulp-purgecss": "^1.2.0",
-        "gulp-svgmin": "^3.0.0",
-        "gulp-svgstore": "^7.0.1",
-        "gulp-uglify": "^3.0.2",
-        "gulp-zip": "^5.0.2",
-        "jquery": "^3.5.1",
-        "jquery.loan-calculator": "^3.1.3",
-        "nouislider": "^14.6.2",
-        "popper.js": "^1.16.1",
-        "wnumb": "^1.2.0",
-        "gulp-sass": "^5.1.0"
-    },
-    "devDependencies": {
-        "eslint": "^7.32.0",
-        "eslint-config-airbnb": "^18.2.1",
-        "eslint-plugin-import": "^2.25.2",
-        "eslint-plugin-jsx-a11y": "^6.4.1",
-        "eslint-plugin-react": "^7.26.1",
-        "gulp": "^4.0.2",
-        "gulp-clean-css": "^4.3.0",
-        "gulp-embed-svg": "^1.2.0",
-        "gulp-eslint": "^6.0.0",
-        "gulp-svgo": "^2.2.1",
-        "purgecss-with-wordpress": "^4.0.3",
-        "sass": "^1.50.0"
-    },
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/lmculondon/lmcu-loan-calculator.git"
-    },
-    "keywords": [
-        "loan-calculator",
-        "calculator",
-        "loan"
-    ],
-    "author": "Ben West",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/lmculondon/lmcu-loan-calculator/issues"
-    },
-    "homepage": "https://github.com/lmculondon/lmcu-loan-calculator#readme"
+  "name": "lmcu-loan-calculator",
+  "version": "2.0.0",
+  "description": "A Wordpress plugin to create a simple loan calculator from a shortcode configurable via shortcode attributes",
+  "main": "gulpfile.js",
+  "dependencies": {
+    "bootstrap": "^4.5.3",
+    "jquery": "^3.5.1",
+    "nouislider": "^14.6.2",
+    "popper.js": "^1.16.1",
+    "wnumb": "^1.2.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.7",
+    "cssnano": "^5.1.12",
+    "gulp": "^4.0.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-postcss": "^9.0.1",
+    "gulp-sass": "^5.1.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-uglify": "^3.0.2",
+    "sass": "^1.53.0"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lmculondon/lmcu-loan-calculator.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/lmculondon/lmcu-loan-calculator/issues"
+  },
+  "homepage": "https://github.com/lmculondon/lmcu-loan-calculator#readme"
 }
