reading termVariables from JSON
JS now reads term settings from the json file and adjust the slider accordingly.

--- a/source/loan-settings.json
+++ b/source/loan-settings.json
@@ -21,11 +21,24 @@
     "defaultTerm": 36,
     "step": 25,
     "desc": "Lorem ipsum dolor",
-    "displayName": "Personal Loan"
+    "displayName": "Personal Loan",
+    "variableTerms": {
+      "2499": {
+        "minTerm": 3,
+        "maxTerm": 36
+      },
+      "4999": {
+        "minTerm": 3,
+        "maxTerm": 60
+      },
+      "14999": {
+        "minTerm": 6,
+        "maxTerm": 60
+      },
+      "25001": {
+        "minTerm": 12,
+        "maxTerm": 84
+      }
+    }
   }
-
 ]
-
-
-
-
